@@ -59,6 +59,11 @@ Extension modules
   Subsumed the times() function into repeat().
   Added chain() and cycle().
 
+- The socket module now always uses the _socketobject wrapper class, even on
+  platforms which have dup(2).  The makefile() method is built directly
+  on top of the socket without duplicating the file descriptor, allowing
+  timeouts to work properly.
+
 Library
 -------
 
